# src/modules/note/note.controller.ts
@@ -54,18 +54,4 @@ export class NoteController {
     })
   }
 
-  @Delete('/:id')
-  @HttpCode(HttpStatus.OK)
-  @ApiImplicitParam({ name: 'id'})
-  @ApiOperation({ title: 'Borra una nota por id'})
-  @ApiResponse({ status: HttpStatus.OK, description: 'Ok', type: null, isArray: false})
-  @ApiResponse({ status: HttpStatus.BAD_REQUEST, description: 'Bad Request', type: ErrorResponse})
-  @ApiResponse({ status: HttpStatus.UNAUTHORIZED, description: 'Unauthorized', type: ErrorResponse})
-  @ApiResponse({ status: HttpStatus.INTERNAL_SERVER_ERROR, description: 'Internal server error', type: ErrorResponse})
-  async delete( @Param() params): Promise<void> {
-    return this.noteService.delete(params.id).catch (err => {
-      console.log(Config.redLog, `[ERROR] - ${this.constructor.name}:delete() -> `, err);
-      throw new HttpException('Nota no borrada',HttpStatus.INTERNAL_SERVER_ERROR);
-    })
-  }
 }
